--- a/app/src/main/res/layout/activity_loginactivity.xml
+++ b/app/src/main/res/layout/activity_loginactivity.xml
@@ -4,62 +4,88 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.androidbelieve.drawerwithswipetabs.Loginactivity">
+    tools:context=".Loginactivity">
 
-    <LinearLayout
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:orientation="vertical"
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:layout_gravity="center_horizontal"
-            android:text="User Login"/>
-
-        <EditText
-            android:layout_margin="15dp"
-            android:inputType="textEmailAddress"
-            android:hint="Enter your Email"
-            android:id="@+id/editTextEmail"
+        <TableLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:stretchColumns="1">
 
+            <RelativeLayout
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-        <EditText
-            android:layout_margin="15dp"
-            android:inputType="textPassword"
-            android:hint="Enter your password"
-            android:id="@+id/editTextPass"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:layout_gravity="center_horizontal"
+                    android:text="User Login"
+                    android:layout_above="@+id/editTextEmail"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="20dp" />
 
-        <Button
-            android:layout_margin="15dp"
-            android:id="@+id/buttonsignin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="SignIn" />
+                <EditText
+                    android:inputType="textPassword"
+                    android:hint="Enter your Email"
+                    android:id="@+id/editTextEmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_above="@+id/editTextPass"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginBottom="16dp" />
 
-        <TextView
-            android:layout_margin="15dp"
-            android:textAlignment="center"
-            android:text="Not registered? register here"
-            android:id="@+id/textviewsignup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+                <EditText
+                    android:inputType="textPassword"
+                    android:hint="Enter your password"
+                    android:id="@+id/editTextPass"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="24dp"
+                    android:layout_above="@+id/buttonsignin"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
 
-        <TextView
-            android:layout_margin="15dp"
-            android:textAlignment="center"
-            android:text="Forgot Password?"
-            android:id="@+id/textviewforpass"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+                <Button
+                    android:id="@+id/buttonsignin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="SignIn"
+                    android:layout_centerVertical="true"
+                    android:layout_alignLeft="@+id/editTextEmail"
+                    android:layout_alignStart="@+id/editTextEmail" />
 
+                <TextView
+                    android:textAlignment="center"
+                    android:text="Not registered? register here"
+                    android:id="@+id/textviewsignup"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_below="@+id/textviewforpass"
+                    android:layout_centerHorizontal="true" />
+
+                <TextView
+                    android:textAlignment="center"
+                    android:text="Forgot Password?"
+                    android:id="@+id/textviewforpass"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="45dp"
+                    android:layout_below="@+id/buttonsignin"
+                    android:layout_alignLeft="@+id/textviewsignup"
+                    android:layout_alignStart="@+id/textviewsignup" />
+            </RelativeLayout>
+        </TableLayout>
+    </ScrollView>
 </RelativeLayout>
